--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: c(
     person(given = "Jiajun", family = "Gao", role = c("ctb")),
     person(given = "Daehoon", family = "Gwak", role = c("ctb")),
     person(given = "Sitong", family = "Liu", role = c("ctb")),
-    person(given = "Sean", family = "Burke", role = c("ctb"))
+    person(given = "Sean", family = "Burke", role = c("ctb")),
+    person(given = "Dennis", family = "Pearl", role = c("aut")),
+    person(given = "Neil", family = "Hatfield", role = c("aut"))
   )
 Chapter: Data Description
 Description: This app provides an opportunity to explore how the correlation and regression line relate to the points on a scatterplot.
